package game;

public class HUD {
}
