package immobile;

public class Block {

}
