package immobile;

public class FloorTile extends Block {
}
