package immobile;

public class Wall extends Block {
}
