package mobile;

public class Zombie {
}
