@startuml
class Main {
    +playerInput
    +handleMovePlayer() : void
    +handleMoveZombies() : void
    +checkPlayerCollision() : boolean
    +spawnZombies() : void
    +handlePauseGame() : void
}

class Player {
 + positionX : int
 + positionY : int
+health : int
+lives : int
+score : int

+mineBlock() : void
+catapult() : void
}

class Zombie {
+positionX : int
+positionY : int
+damagePlayer() : void
}

class HUD {
+displayHUD() : void
+displayPauseMenu() : void
}

class Block{
+isWalkable : boolean
+mapTemplates
+buildMap() : void
}

class Gem {
    + positionX : int
    + positionY : int
    + isCollected : boolean
    + beCollected() : void
}

class Wall{
 + positionX : int
 + positionY : int
 + hasTorch : boolean
 + displayWall() : void
}

class Exit{
 + positionX : int
 + positionY : int
 + isExitValid : boolean
 + endLevel() : void


}

class FloorTile{
+ positionX : int
+ positionY : int
+ lightLevel : int
+ displayFloorTile() : void

}

Block <|-- Wall
Block <|-- FloorTile
Block <|-- Gem
Block <|-- Exit


Main -down-> Player
Main -down-> Zombie
Main -down-> Block

@enduml